// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`selectively.Type Array 1`] = `
Array [
  Object {
    "cursor": 7,
    "value": ".every()",
  },
]
`;

exports[`selectively.Type Array 2`] = `
Array [
  Object {
    "cursor": 7,
    "value": ".every()",
  },
  Object {
    "cursor": 6,
    "value": ".some()",
  },
]
`;

exports[`selectively.Type Boolean 1`] = `
Boolean {
  "class": "boolean",
}
`;

exports[`selectively.Type Boolean 2`] = `
Array [
  Object {
    "cursor": undefined,
    "value": ".true",
  },
]
`;

exports[`selectively.Type Boolean 3`] = `
Array [
  Object {
    "cursor": undefined,
    "value": ".true",
  },
  Object {
    "cursor": undefined,
    "value": ".false",
  },
]
`;

exports[`selectively.Type Object 1`] = `
TObject {
  "class": "object",
  "completions": Array [
    Object {
      "value": "name",
    },
  ],
  "properties": Object {
    "name": String {
      "class": "string",
    },
  },
}
`;

exports[`selectively.Type Tokenizer 1`] = `
Array [
  Object {
    "value": ".",
  },
  Object {
    "value": "object",
  },
  Object {
    "value": ".",
  },
  Object {
    "value": "has",
  },
  Object {
    "value": "(",
  },
  Object {
    "value": ")",
  },
]
`;

exports[`selectively.Type Tokenizer 2`] = `
Array [
  Object {
    "value": ".",
  },
  Object {
    "value": "if",
  },
]
`;

exports[`selectively.Type complete 1`] = `
TObject {
  "class": "object",
  "completions": Array [
    Object {
      "value": "id",
    },
    Object {
      "value": "status",
    },
  ],
  "properties": Object {
    "id": TObject {
      "class": "object",
      "completions": Array [
        Object {
          "value": "first",
        },
        Object {
          "value": "second",
        },
      ],
      "properties": Object {
        "first": String {
          "class": "string",
        },
        "second": String {
          "class": "string",
        },
      },
    },
    "status": TObject {
      "class": "object",
      "completions": Array [
        Object {
          "value": "statusArray",
        },
        Object {
          "value": "statusString",
        },
      ],
      "properties": Object {
        "statusArray": Array {
          "class": "array",
          "type": String {
            "class": "string",
          },
        },
        "statusString": String {
          "class": "string",
        },
      },
    },
  },
}
`;

exports[`selectively.Type complete 2`] = `
Array [
  Object {
    "cursor": undefined,
    "value": ".has(id)",
  },
  Object {
    "cursor": undefined,
    "value": ".has(status)",
  },
]
`;

exports[`selectively.Type complete 3`] = `
Array [
  Object {
    "cursor": undefined,
    "value": ".has(id)",
  },
]
`;

exports[`selectively.Type complete 4`] = `
Array [
  Object {
    "cursor": undefined,
    "value": ".has(id)",
  },
  Object {
    "cursor": undefined,
    "value": ".has(status)",
  },
]
`;

exports[`selectively.Type complete 5`] = `
Array [
  Object {
    "cursor": undefined,
    "value": ".has(id)",
  },
]
`;

exports[`selectively.Type complete 6`] = `
Array [
  Object {
    "cursor": 12,
    "value": ".status.has()",
  },
  Object {
    "cursor": undefined,
    "value": ".status.statusArray",
  },
  Object {
    "cursor": undefined,
    "value": ".status.statusString",
  },
]
`;

exports[`selectively.Type complete 7`] = `
Array [
  Object {
    "cursor": undefined,
    "value": ".status.statusArray.",
  },
]
`;

exports[`selectively.Type complete 8`] = `
Array [
  Object {
    "cursor": 26,
    "value": ".status.statusArray.every()",
  },
  Object {
    "cursor": 25,
    "value": ".status.statusArray.some()",
  },
]
`;

exports[`selectively.Type complete 9`] = `
Array [
  Object {
    "cursor": 26,
    "value": ".status.statusArray.every()",
  },
]
`;

exports[`selectively.Type complete 10`] = `
Array [
  Object {
    "cursor": 8,
    "value": ".id.has()",
  },
  Object {
    "cursor": undefined,
    "value": ".id.first",
  },
  Object {
    "cursor": undefined,
    "value": ".id.second",
  },
]
`;

exports[`selectively.Type complete 11`] = `
Array [
  Object {
    "cursor": undefined,
    "value": ".id.first",
  },
]
`;

exports[`selectively.Type complete 12`] = `
Array [
  Object {
    "cursor": undefined,
    "value": ".id.first.",
  },
  Object {
    "cursor": undefined,
    "value": ".id.first:",
  },
  Object {
    "cursor": undefined,
    "value": ".id.first*",
  },
  Object {
    "cursor": undefined,
    "value": ".id.first>",
  },
  Object {
    "cursor": undefined,
    "value": ".id.first>=",
  },
  Object {
    "cursor": 10,
    "value": ".id.first**",
  },
  Object {
    "cursor": undefined,
    "value": ".id.first<",
  },
  Object {
    "cursor": undefined,
    "value": ".id.first<=",
  },
  Object {
    "cursor": undefined,
    "value": ".id.first!",
  },
  Object {
    "cursor": 9,
    "value": ".id.first*",
  },
]
`;

exports[`selectively.Type complete 13`] = `
Array [
  Object {
    "cursor": 16,
    "value": ".id.first.every()",
  },
]
`;

exports[`selectively.Type complete 14`] = `
Array [
  Object {
    "cursor": undefined,
    "value": ".id.first.every().",
  },
  Object {
    "cursor": undefined,
    "value": ".id.first.every():",
  },
  Object {
    "cursor": undefined,
    "value": ".id.first.every()*",
  },
  Object {
    "cursor": undefined,
    "value": ".id.first.every()>",
  },
  Object {
    "cursor": undefined,
    "value": ".id.first.every()>=",
  },
  Object {
    "cursor": 18,
    "value": ".id.first.every()**",
  },
  Object {
    "cursor": undefined,
    "value": ".id.first.every()<",
  },
  Object {
    "cursor": undefined,
    "value": ".id.first.every()<=",
  },
  Object {
    "cursor": undefined,
    "value": ".id.first.every()!",
  },
  Object {
    "cursor": 17,
    "value": ".id.first.every()*",
  },
]
`;

exports[`selectively.Type complete 15`] = `
Array [
  Object {
    "cursor": undefined,
    "value": ".id.first<",
  },
  Object {
    "cursor": undefined,
    "value": ".id.first<=",
  },
]
`;

exports[`selectively.Type complete 16`] = `
Array [
  Object {
    "cursor": undefined,
    "value": ".id.first<=",
  },
]
`;

exports[`selectively.Type complete 17`] = `
Array [
  Object {
    "cursor": 8,
    "value": ".id.has()",
  },
]
`;

exports[`selectively.Type complete 18`] = `
Array [
  Object {
    "cursor": undefined,
    "value": ".id.has(first)",
  },
  Object {
    "cursor": undefined,
    "value": ".id.has(second)",
  },
]
`;

exports[`selectively.Type complete 19`] = `
Array [
  Object {
    "cursor": undefined,
    "value": ".id.has(first)",
  },
  Object {
    "cursor": undefined,
    "value": ".id.has(second)",
  },
]
`;
